--- a/projects/RL-Quadcopter-2/Quadcopter_Project.ipynb
+++ b/projects/RL-Quadcopter-2/Quadcopter_Project.ipynb
@@ -588,11 +588,9 @@
     "\n",
     "**Answer**:\n",
     "\n",
-    "I think that my task was pretty difficult my agent struggled to learn and come to .\n",
+    "I think that my task was pretty difficult my agent seemed to struggled to learn.\n",
     "\n",
-    "I was able to test the model to determine what the agent learned. For instance, the “Plot of actor model over inputs z (height) and z-velocity” shows that the agent learned to turn up his rotor if he is below a height of 10 or if he is falling. This is very different from the initial model (see “Plot of initial actor model over inputs z (height) and z-velocity”).\n",
-    "\n",
-    "Unfortunately it appears that either there is an issue with my task being too easy for the model, or some instability in the system, because I cannot run the learning routine for more than ~10-30 steps. When I do, the model goes full tilt to either extreme (either always choosing the lowest action or highest action).\n"
+    "It appears the task i selected my have been too difficult. As the final performance still seemed fairly poor."
    ]
   },
   {
